# car-life

./: README.md  manage.py  pyproject.toml
car_life/: asgi.py  settings.py  urls.py  wsgi.py
